--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="lib" path="C:/Users/Agato/Desktop/LIB/selenium-java-3.13.0/client-combined-3.13.0-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Agato/Desktop/LIB/java-client-6.1.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Agato/Desktop/LIB/selenium-server-standalone-3.13.0.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
